Modify project structure to keep separated concerns server vs client

--- a/package.json
+++ b/package.json
@@ -3,11 +3,5 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Luis Choma <luis.choma@g.globo>",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "scripts": {
-      "start": "node server/index.js"
-    }
+  "license": "MIT"
 }
