--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,12 @@
     "author": "Luis Choma <luis.choma@g.globo>",
     "license": "MIT",
     "dependencies": {
-      "express": "^4.17.1"
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.2.5"
     },
     "scripts": {
         "start": "node index.js"
-      }
-  }
-  
+    }
+}
