--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,10 @@
     },
     "scripts": {
         "start": "node index.js"
+    },
+    "devDependencies": {
+        "eslint": "^7.21.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.22.1"
     }
 }
