--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mysql": "^2.18.1",
-        "mysql2": "^2.2.5"
+        "mysql2": "^2.2.5",
+        "sql-query": "^0.1.27"
     },
     "scripts": {
         "start": "node index.js"
