--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -18,6 +18,7 @@
         "import/no-extraneous-dependencies": "off",
         "import/no-named-as-default": "off",
         "import/no-unresolved": "off",
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "allowTernary": true
     }   
 }
