--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "jest": "^26.6.3",
         "md5": "^2.3.0",
         "moment": "^2.29.1",
         "mysql": "^2.18.1",
@@ -15,11 +16,19 @@
         "sql-query": "^0.1.27"
     },
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "test": "jest"
     },
     "devDependencies": {
         "eslint": "^7.21.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.22.1"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "coveragePathIgnorePatterns": [
+            "/node_modules/"
+        ]
     }
 }
+
