--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -3,10 +3,6 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb"
-    ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -18,8 +14,8 @@
         "react"
     ],
     "rules": {
-        "padded-blocks": ["error", "never"],
-        "semi": ["error", "never"],
+        "padded-blocks": ["warn", "never"],
+        "semi": ["warn", "never"],
 
         "import/extensions": "off",
         "import/imports-first": "off",
@@ -27,6 +23,8 @@
         "import/no-extraneous-dependencies": "off",
         "import/no-named-as-default": "off",
         "import/no-unresolved": "off",
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
