--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jest": "^26.6.3",
+        "jsonwebtoken": "^8.5.1",
         "md5": "^2.3.0",
         "moment": "^2.29.1",
         "mysql": "^2.18.1",
@@ -32,4 +33,3 @@
         "transform": {}
     }
 }
-
