--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -18,6 +18,7 @@
         "react"
     ],
     "rules": {
-        "indent": [2,2]
+        "indent": [2,2],
+        "eslint no-trailing-spaces": 2
     }
 }
