--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -19,6 +19,6 @@
     ],
     "rules": {
         "indent": [2,2],
-        "eslint no-trailing-spaces": 2
+        "no-trailing-spaces": 2
     }
 }
