--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "eslint": "^7.22.0",
+    "eslint-plugin-react": "^7.22.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
