--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Luis Choma <luis.choma@g.globo>",
   "license": "MIT",
   "dependencies": {
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-router-dom": "^5.2.0"
   }
 }
