--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "reset-css": "^5.0.1",
     "sass": "^1.32.8",
     "typeface-saira": "^1.1.13",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "axios": "^0.21.1",
+    "prop-types": "^15.7.2",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
